--- a/OOP/ExtensionMethodsDelegatesLambdaLINQ/Students/Students.csproj
+++ b/OOP/ExtensionMethodsDelegatesLambdaLINQ/Students/Students.csproj
@@ -41,6 +41,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Group.cs" />
     <Compile Include="Student.cs" />
     <Compile Include="Students.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
